--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.mjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serverStart": "nodemon server/server.mjs"
   },
   "author": "Frank Smith",
   "license": "ISC",
